<resources>
    <string name="app_name">Appiclaje</string>
    <string name="Volver">Volver</string>
    <string name="usuario">Usuario</string>
    <string name="registrarse">Registrarse</string>
    <string name="contrasena">contraseña</string>
    <string name="por_favor_ingrese_los_siguientes_datos_para_registrarse_en_la_app">Por favor ingrese los siguientes datos para registrarse en la App:</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="telefono">Telefono</string>
    <string name="direccion">Dirección</string>
    <string name="registro">Registro</string>
    <string name="ingrese_contrase_a">Ingrese contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="por_favor_ingrese_los_siguientes_datos_para_ingresar_a_la_app">Por favor ingrese los siguientes datos para ingresar a la App:</string>
    <string name="ingrese_su_correo">Ingrese su correo</string>
    <string name="olvid_contrase_a">Olvidé contraseña</string>
    <string name="recordar_usuario">Recordar usuario</string>
    <string name="todo">TODO</string>
    <string name="email">email</string>
    <string name="id">Ingrese el id de la solicitud</string>
    <string name="consultar">Consultar solicitudes</string>
    <string name="consultarBtn">ir</string>
    <string-array name="solicitud">
        <item>Id</item>
        <item>Tipo</item>
        <item>Peso</item>
        <item>Dirección</item>

    </string-array>
    <string name="title_activity_tipo_consulta">TipoConsulta</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="aceptar_solicitud">Aceptar solicitud</string>

</resources>