<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".IngresarAplicacion">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="387dp"
        android:layout_height="254dp"
        android:src="@drawable/logogreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="60dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/ingresar_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/cairo"
        android:hapticFeedbackEnabled="false"
        android:text="@string/ingresar"
        android:textStyle="bold"
        android:onClick="home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.872"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.761" />

    <Button
        android:id="@+id/registrar_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/cairo"
        android:hapticFeedbackEnabled="false"
        android:onClick="registrarUsuario"
        android:text="@string/registrarse"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.862"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.831" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="342dp"
        android:layout_height="51dp"
        android:background="@color/background"
        android:fontFamily="@font/cairo"
        android:text="@string/por_favor_ingrese_los_siguientes_datos_para_ingresar_a_la_app"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.477" />

    <Switch
        android:id="@+id/recordar_sesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cairo"
        android:minHeight="48dp"
        android:onClick="saveSession"
        android:text="@string/recordar_usuario"
        android:textAllCaps="false"
        android:textColorHighlight="#8BC34A"
        android:textColorLink="#8BC34A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.752" />


    <Button
        android:id="@+id/olvidar_button"
        android:layout_width="195dp"
        android:layout_height="52dp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/cairo"
        android:text="@string/olvid_contrase_a"
        android:onClick="recuperarContraseña"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.819"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.907" />

    <EditText
        android:id="@+id/email_address"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="#455A64"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.573" />

    <EditText
        android:id="@+id/password"
        android:layout_width="303dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/contrasena"
        android:inputType="textPassword"
        android:textColorHint="#455A64"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.665" />

</androidx.constraintlayout.widget.ConstraintLayout>