<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ConsultarId">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="319dp"
        android:layout_height="228dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/logogreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/ConsultarButton"
        android:layout_width="81dp"
        android:layout_height="39dp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/cairo"
        android:hapticFeedbackEnabled="false"
        android:text="@string/consultarBtn"
        android:onClick="consultar"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.884"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.384" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="213dp"
        android:layout_height="34dp"
        android:background="@color/background"
        android:fontFamily="@font/cairo"
        android:text="@string/consultar"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.381" />

    <ListView
        android:id="@+id/listId"
        android:layout_width="354dp"
        android:layout_height="395dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.907" />


</androidx.constraintlayout.widget.ConstraintLayout>